src/tests/snapshots/niri__tests__window_opening__check_target_size@dwP0.25-dhF500-wfsAU-t.snap
---
source: src/tests/window_opening.rs
description: "default column width: P0.25\ndefault window height: F500\nwant fullscreen: AU\ntabbed"
expression: snapshot
---
initial configure:
size: 291 × 500, bounds: 1239 × 688, states: []

post-map configures:
size: 291 × 500, bounds: 1239 × 688, states: []
size: 291 × 500, bounds: 1239 × 688, states: [Activated]
